[gd_scene load_steps=5 format=3 uid="uid://cmvytivvkkdo8"]

[ext_resource type="Script" path="res://Game_Files/Scripts/NPCtest.gd" id="1_dplve"]
[ext_resource type="Texture2D" uid="uid://di315tvgh7qrv" path="res://Game_Files/Assets/Sprites/Sprite_Statics/beaver-3.png" id="2_o2i71"]
[ext_resource type="FontFile" uid="uid://bipj5pg8ksuco" path="res://Game_Files/Assets/UI/Fonts/beaverblast.ttf" id="3_nvcrh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjogs"]
size = Vector2(321, 284)

[node name="RiverNPC" type="Node2D"]
script = ExtResource("1_dplve")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_o2i71")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(-2.5, -17)
shape = SubResource("RectangleShape2D_vjogs")

[node name="InteractText" type="RichTextLabel" parent="."]
offset_left = -163.0
offset_top = -106.0
offset_right = 160.0
offset_bottom = -36.0
theme_override_fonts/normal_font = ExtResource("3_nvcrh")
bbcode_enabled = true
text = "
[center][wave amp=30.0 freq=5.0 connected=1]press E to talk[/wave][/center]"

[connection signal="area_entered" from="InteractArea" to="." method="interact_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="interact_area_exited"]
